[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/timer/Timer.gd" type="Script" id=1]
[ext_resource path="res://scenes/timer/fonts/ARIAL.TTF" type="DynamicFontData" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="Timer" type="Node2D"]
script = ExtResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color( 0.941176, 0.172549, 0.172549, 1 )
position = Vector2( 784.75, 55 )
scale = Vector2( 782.25, 60 )
mesh = SubResource( 1 )

[node name="lblProcess" type="RichTextLabel" parent="."]
margin_left = 17.0
margin_right = 304.0
margin_bottom = 115.0
custom_fonts/normal_font = SubResource( 2 )
text = "Process
time: 0
frames: 0"

[node name="lblPhysicsProcess" type="RichTextLabel" parent="."]
margin_left = 304.0
margin_top = -5.0
margin_right = 587.0
margin_bottom = 112.0
custom_fonts/normal_font = SubResource( 2 )
text = "PhProcess
time: 0
frames: 0"

[node name="lblFramesDrawnProcess" type="RichTextLabel" parent="."]
margin_left = 587.0
margin_top = -5.0
margin_right = 870.0
margin_bottom = 112.0
custom_fonts/normal_font = SubResource( 2 )
text = "Process (Godot)
frames: 0
fps: 0"

[node name="lblFramesDrawnPhysicsProcess" type="RichTextLabel" parent="."]
margin_left = 895.0
margin_top = -5.0
margin_right = 1190.0
margin_bottom = 112.0
custom_fonts/normal_font = SubResource( 2 )
text = "PhProcess (Godot)
frames: 0
fps: 0"

[node name="lblTimeProcess" type="RichTextLabel" parent="."]
margin_left = 1190.0
margin_top = -5.0
margin_right = 1567.0
margin_bottom = 112.0
custom_fonts/normal_font = SubResource( 2 )
text = "Time
process: 0
phProcess: 0"

[node name="lblTimePhProcess" type="RichTextLabel" parent="."]
margin_left = 1190.0
margin_top = -5.0
margin_right = 1567.0
margin_bottom = 112.0
custom_fonts/normal_font = SubResource( 2 )
text = "Time
process: 0
phProcess: 0"
